--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -28,5 +28,7 @@
     <string name="connecting_to_service">Verbinde mit Presenter Service. Bitte warten…</string>
     <string name="parsing_error">Fehler beim Analysieren der Informationen des Servers.</string>
     <string name="app_icon_description">App icon</string>
+    <string name="start_presentation">Starte Präsentation</string>
+    <string name="stop_presentation">Stoppe Präsentation</string>
     <string name="protocol_version">Unterstützte Version des &lt;a href="https://github.com/FelixWohlfrom/Presenter-Protocol"&gt;Presenter Protocol&lt;/a&gt;:&lt;br /&gt;Minimum: %d&lt;br /&gt;Maximum: %d</string>
 </resources>
