--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,8 @@
     <string name="incompatible_server_version">Incompatible server version detected. Please make sure both app and server are up to date.</string>
     <string name="next_slide">Next Slide</string>
     <string name="prev_slide">Previous Slide</string>
+    <string name="stop_presentation">Stop Presentation</string>
+    <string name="start_presentation">Start Presentation</string>
 
     <!-- Bluetooth presenting -->
     <string name="bluetooth_not_available">Bluetooth is not available</string>
