--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -30,5 +30,15 @@
     <string name="app_icon_description">App icon</string>
     <string name="start_presentation">Starte Präsentation</string>
     <string name="stop_presentation">Stoppe Präsentation</string>
-    <string name="protocol_version">Unterstützte Version des &lt;a href="https://github.com/FelixWohlfrom/Presenter-Protocol"&gt;Presenter Protocol&lt;/a&gt;:&lt;br /&gt;Minimum: %d&lt;br /&gt;Maximum: %d</string>
+    <string name="protocol_version">Unterstützte Version des &lt;a href="https://github.com/FelixWohlfrom/Presenter-Protocol"&gt;Presenter Protocol&lt;/a&gt;:&lt;br /&gt;Minimum: %1d&lt;br /&gt;Maximum: %2d</string>
+    <string name="wifi_not_available">Wlan nicht verfügbar</string>
+    <string name="wifi_required_leaving">Wlan wird für die Fernsteuerung benötigt. Kehre zum Hauptmenü zurück…</string>
+    <string name="title_broadcasting_devices">Laufende Presenter Server</string>
+    <string name="manual_connection">Manuell verbinden</string>
+    <string name="manual_config_presenter_name">Server Name (Optional)</string>
+    <string name="manual_config_ip_address">IP Adresse</string>
+    <string name="manual_config_connect">Verbinden</string>
+    <string name="manual_config_no_ip">Bitte eine IP Adresse eingeben, zu der verbunden werden soll</string>
+    <string name="wifi_connected">Verbunden mit: %s</string>
+    <string name="wifi_not_connected">Wlanverbindung fehlgeschlagen. Stelle sicher, dass der Server auf dem PC gestartet wurde, bevor eine Verbindung aufgebaut wird.</string>
 </resources>
